platform_versioned_docs/version-4.11.0/api/_partials/resources/projects/reference.mdx

import Metadata from "../metadata/reference.mdx"

<Metadata />



<details className="config-field" data-expandable="true">
<summary>

## `spec` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `displayName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-displayName}

DisplayName is the name that should be displayed in the UI

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `description` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-description}

Description describes an app

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `owner` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-owner}

Owner holds the owner of this object

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `user` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-owner-user}

User specifies a Loft user.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `team` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-owner-team}

Team specifies a Loft team.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `quotas` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-quotas}

Quotas define the quotas inside the project

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `project` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-quotas-project}

Project holds the quotas for the whole project

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `user` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-quotas-user}

User holds the quotas per user / team

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `allowedClusters` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-allowedClusters}

AllowedClusters are target clusters that are allowed to target with
environments.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-allowedClusters-name}

Name is the name of the cluster that is allowed to create an environment in.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `allowedRunners` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-allowedRunners}

AllowedRunners are target runners that are allowed to target with

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-allowedRunners-name}

Name is the name of the runner that is allowed to create an environment in.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `allowedTemplates` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-allowedTemplates}

AllowedTemplates are the templates that are allowed to use in this
project.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `kind` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-allowedTemplates-kind}

Kind of the template that is allowed. Currently only supports DevPodWorkspaceTemplate, VirtualClusterTemplate & SpaceTemplate

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `group` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-allowedTemplates-group}

Group of the template that is allowed. Currently only supports storage.loft.sh

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-allowedTemplates-name}

Name of the template

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `isDefault` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-allowedTemplates-isDefault}

IsDefault specifies if the template should be used as a default

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `allowedNodeTypes` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">array|null</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-allowedNodeTypes}

AllowedNodeTypes restricts which NodeTypes can be referenced by
NodeClaims in this project. An entry can be an exact name
("aws.large") or a provider wildcard ("aws.*"). If unset (nil),
all NodeTypes are allowed; an empty list disallows all NodeTypes.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `allowedNodeProfiles` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">array|null</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-allowedNodeProfiles}

AllowedNodeProfiles restricts which NodeProfiles can be referenced
by NodeClaims and joinscript requests in this project. An entry can
be an exact name ("platform.gpu-training") or an owner wildcard
("platform.*"). If unset (nil), all NodeProfiles are allowed; an
empty list disallows all NodeProfiles.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `defaultNodeProfile` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-defaultNodeProfile}

DefaultNodeProfile is the default NodeProfile applied to nodes in this
project when none is selected explicitly. It is overridden by the
vCluster-level privateNodes.defaultProfile and by per-node/per-pool
selection, and is validated against allowedNodeProfiles.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `requireTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-requireTemplate}

RequireTemplate configures if a template is required for instance creation.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `disabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-requireTemplate-disabled}

If true, all users within the project will be allowed to create a new instance without a template.
By default, only admins are allowed to create a new instance without a template.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `requirePreset` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-requirePreset}

RequirePreset configures if a preset is required for instance creation.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `disabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-requirePreset-disabled}

If true, all users within the project will not be allowed to create a new instance without a preset.
By default, all users are allowed to create a new instance without a preset.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `members` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-members}

Members are the users and teams that are part of this project

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `kind` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-members-kind}

Kind is the kind of the member. Currently either User or Team

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `group` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-members-group}

Group of the member. Currently only supports storage.loft.sh

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-members-name}

Name of the member

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `clusterRole` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-members-clusterRole}

ClusterRole is the assigned role for the above member

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `access` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-access}

Access holds the access rights for users and teams

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-access-name}

Name is an optional name that is used for this access rule

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `verbs` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-access-verbs}

Verbs is a list of Verbs that apply to ALL the ResourceKinds and AttributeRestrictions contained in this rule. VerbAll represents all kinds.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `subresources` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-access-subresources}

Subresources defines the sub resources that are allowed by this access rule

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `users` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-access-users}

Users specifies which users should be able to access this secret with the aforementioned verbs

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `teams` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-access-teams}

Teams specifies which teams should be able to access this secret with the aforementioned verbs

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `namespaceTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-namespaceTemplate}

NamespaceTemplate defines metadata that should be applied to the project's namespace on creation.
This is useful for environments where admission controllers (e.g., Kyverno)
require specific labels or annotations on namespaces.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `metadata` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-namespaceTemplate-metadata}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-namespaceTemplate-metadata-labels}

Labels are labels on the object

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-namespaceTemplate-metadata-annotations}

Annotations are annotations on the object

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `namespacePattern` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-namespacePattern}

NamespacePattern specifies template patterns to use for creating each space or tenant cluster's namespace

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `space` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-namespacePattern-space}

Space holds the namespace pattern to use for space instances

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `virtualCluster` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-namespacePattern-virtualCluster}

VirtualCluster holds the namespace pattern to use for tenant cluster instances

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `argoCD` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD}

ArgoIntegration holds information about ArgoCD Integration

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-enabled}

Enabled indicates if the ArgoCD Integration is enabled for the project -- this knob only
enables the syncing of virtualclusters, but does not enable SSO integration or project
creation (see subsequent spec sections!).

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `cluster` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-cluster}

Cluster defines the name of the cluster that ArgoCD is deployed into -- if not provided this
will default to 'loft-cluster'.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `virtualClusterInstance` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-virtualClusterInstance}

VirtualClusterInstance defines the name of *tenant cluster* (instance) that ArgoCD is
deployed into. If provided, Cluster will be ignored and Loft will assume that ArgoCD is
running in the specified tenant cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `namespace` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-namespace}

Namespace defines the namespace in which ArgoCD is running in the cluster.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `sso` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-sso}

SSO defines single-sign-on related values for the ArgoCD Integration. Enabling SSO will allow
users to authenticate to ArgoCD via Loft.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-sso-enabled}

Enabled indicates if the ArgoCD SSO Integration is enabled for this project. Enabling this
will cause Loft to configure SSO authentication via Loft in ArgoCD. If Projects are *not*
enabled, all users associated with this Project will be assigned either the 'read-only'
(default) role, *or* the roles set under the AssignedRoles field.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `host` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-sso-host}

Host defines the ArgoCD host address that will be used for OIDC authentication between loft
and ArgoCD. If not specified OIDC integration will be skipped, but vclusters/spaces will
still be synced to ArgoCD.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `assignedRoles` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-sso-assignedRoles}

AssignedRoles is a list of roles to assign for users who authenticate via Loft -- by default
this will be the `read-only` role. If any roles are provided this will override the default
setting.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `project` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project}

Project defines project related values for the ArgoCD Integration. Enabling Project
integration will cause Loft to generate and manage an ArgoCD appProject that corresponds to
the Loft Project.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-enabled}

Enabled indicates if the ArgoCD Project Integration is enabled for this project. Enabling
this will cause Loft to create an appProject in ArgoCD that is associated with the Loft
Project. When Project integration is enabled Loft will override the default assigned role
set in the SSO integration spec.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `metadata` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-metadata}

Metadata defines additional metadata to attach to the loft created project in ArgoCD.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `extraAnnotations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-metadata-extraAnnotations}

ExtraAnnotations are optional annotations that can be attached to the project in ArgoCD.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `extraLabels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-metadata-extraLabels}

ExtraLabels are optional labels that can be attached to the project in ArgoCD.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `description` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-metadata-description}

Description to add to the ArgoCD project.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `sourceRepos` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-sourceRepos}

SourceRepos is a list of source repositories to attach/allow on the project, if not specified
will be "*" indicating all source repositories.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `destinations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-destinations}

Destinations contains list of destinations available for deployment

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `server` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-destinations-server}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-destinations-namespace}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-destinations-name}



</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `roles` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-roles}

Roles is a list of roles that should be attached to the ArgoCD project. If roles are provided
no loft default roles will be set. If no roles are provided *and* SSO is enabled, loft will
configure sane default values.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-roles-name}

Name of the ArgoCD role to attach to the project.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `description` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-roles-description}

Description to add to the ArgoCD project.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `rules` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-roles-rules}

Rules ist a list of policy rules to attach to the role.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `action` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-roles-rules-action}

Action is one of "*", "get", "create", "update", "delete", "sync", or "override".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `application` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-roles-rules-application}

Application is the ArgoCD project/repository to apply the rule to.
DEPRECATED: Wasn't used. Kind provides a more flexible way to specify the resource type.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `kind` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-roles-rules-kind}

Kind is the kind to apply the rule to

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `permission` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-roles-rules-permission}

Allow applies the "allow" permission to the rule, if allow is not set, the permission will
always be set to "deny".

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `groups` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-roles-groups}

Groups is a list of OIDC group names to bind to the role.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `clusterResourceWhitelist` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-clusterResourceWhitelist}

ClusterResourceWhitelist contains a list of whitelisted cluster level resources
If not specified or empty, deny all cluster-scope resources.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `group` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-clusterResourceWhitelist-group}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `kind` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-clusterResourceWhitelist-kind}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-clusterResourceWhitelist-name}



</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `namespaceResourceWhitelist` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-namespaceResourceWhitelist}

NamespaceResourceWhitelist contains a list of whitelisted namespace level resources
If not specified or empty, allow all namespace-scope resources.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `group` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-namespaceResourceWhitelist-group}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `kind` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-namespaceResourceWhitelist-kind}



</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `clusterResourceBlacklist` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-clusterResourceBlacklist}

ClusterResourceBlacklist contains a list of blacklisted cluster level resources

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `group` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-clusterResourceBlacklist-group}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `kind` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-clusterResourceBlacklist-kind}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-clusterResourceBlacklist-name}



</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `namespaceResourceBlacklist` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-namespaceResourceBlacklist}

NamespaceResourceBlacklist contains a list of blacklisted namespace level resources

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `group` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-namespaceResourceBlacklist-group}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `kind` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-namespaceResourceBlacklist-kind}



</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `sourceNamespaces` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-project-sourceNamespaces}

SourceNamespaces defines the namespaces application resources are allowed to be created in

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `vault` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-vault}

VaultIntegration holds information about Vault Integration

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-vault-enabled}

Enabled indicates if the Vault Integration is enabled for the project -- this knob only
enables the syncing of secrets to or from Vault, but does not setup Kubernetes authentication
methods or Kubernetes secrets engines for vclusters.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `address` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-vault-address}

Address defines the address of the Vault instance to use for this project.
Will default to the `VAULT_ADDR` environment variable if not provided.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `skipTLSVerify` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-vault-skipTLSVerify}

SkipTLSVerify defines if TLS verification should be skipped when connecting to Vault.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `namespace` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-vault-namespace}

Namespace defines the namespace to use when storing secrets in Vault.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `auth` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-vault-auth}

Auth defines the authentication method to use for this project.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `token` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-vault-auth-token}

Token defines the token to use for authentication.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `tokenSecretRef` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-vault-auth-tokenSecretRef}

TokenSecretRef defines the Kubernetes secret to use for token authentication.
Will be used if `token` is not provided.

Secret data should contain the `token` key.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-vault-auth-tokenSecretRef-name}

Name of the referent.
This field is effectively required, but due to backwards compatibility is
allowed to be empty. Instances of this type with an empty value here are
almost certainly wrong.
More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-vault-auth-tokenSecretRef-key}

The key of the secret to select from.  Must be a valid secret key.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `optional` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-vault-auth-tokenSecretRef-optional}

Specify whether the Secret or its key must be defined

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `syncInterval` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-vault-syncInterval}

SyncInterval defines the interval at which to sync secrets from Vault.
Defaults to `1m.`
See https://pkg.go.dev/time#ParseDuration for supported formats.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

## `status` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status}



</summary>




<details className="config-field" data-expandable="true">
<summary>

### `quotas` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas}

Quotas holds the quota status

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `project` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas-project}

Project is the quota status for the whole project

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `limit` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas-project-limit}

Limit is the amount limited, copied from spec.quotas.project

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `used` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas-project-used}

Used is the amount currently used across all clusters

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `clusters` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">&#123;key: object&#125;</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas-project-clusters}

Clusters holds the used amount per cluster. Maps cluster name to used resources

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `used` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas-project-clusters-used}

Used is the amount currently used. Maps resource name, such as pods, to their
used amount.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `user` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas-user}

User is the quota status for each user / team. An example status
could look like this:
status:
  quotas:
    user:
      limit:
        pods: "10"
        spaces: "5"
      users:
        admin:
          used:
            spaces: "3"  # (- calculated in our apiserver
            pods: "8"    # (- the sum calculated from clusters
      clusters:
        cluster-1:  # (- populated by agent from cluster-1
          users:
            admin:
              pods: "3"
        cluster-2:
          users:
            admin:
              pods: "5"

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `limit` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas-user-limit}

Limit is the amount limited per user / team

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `used` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas-user-used}

Used is the used amount per user / team

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `users` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas-user-used-users}

Users is a mapping of users to used resources

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `teams` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas-user-used-teams}

Teams is a mapping of teams to used resources

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `clusters` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">&#123;key: object&#125;</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas-user-clusters}

Clusters holds the used amount per cluster. Maps cluster name to used resources

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `users` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas-user-clusters-users}

Users is a mapping of users to used resources

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `teams` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-quotas-user-clusters-teams}

Teams is a mapping of teams to used resources

</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `conditions` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-conditions}

Conditions holds several conditions the project might be in

</summary>



</details>


</details>
